--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
-click==8.1.3
+alembic==1.13.1
+bcrypt==4.1.3
+blinker==1.8.2
+click==8.1.7
 colorama==0.4.6
-Flask==2.2.3
-Flask-Login==0.6.2
-importlib-metadata==6.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-psycopg2-binary==2.9.5
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+Mako==1.3.5
+MarkupSafe==2.1.5
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
-Werkzeug==2.2.3
-zipp==3.15.0
+SQLAlchemy==2.0.30
+typing_extensions==4.11.0
+Werkzeug==3.0.3
+zipp==3.18.2
